# FastVideo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  collect_env.py  convert_wan_high_low_models.py  env_setup.sh  format.sh  predict.py  pyproject.toml
.buildkite/: pipeline.yml
.buildkite/scripts/: pr_test.sh
.github/ISSUE_TEMPLATE/: 1-bug-report.yml
.github/scripts/: runpod_api.py  runpod_cleanup.py
.github/workflows/: build-image-template.yml  build-image.yml  codespell.yml  docs.yml  fastvideo-publish.yml  pr-test.yml  pre-commit.yml  ruff.yml  runpod-test.yml  sta-publish.yml  test.yml  vsa-publish.yml
comfyui/: README.md
comfyui/examples/: FastHunyuan-diffusers.json  Wan2.1-I2V-14B-480P-Diffusers.json
comfyui/video_generator/: load_image.py  node_helpers.py  video_generator.py
csrc/attn/: MANIFEST.in  README.md  scratch.sh  setup_sta.py  setup_vsa.py  vsa.cpp
csrc/attn/vsa/: vsa.py  (+4 more)
csrc/sliding_tile_attention/: setup.py  st_attn.cpp
docker/: Dockerfile.python3.10  Dockerfile.python3.11  Dockerfile.python3.12  Dockerfile.python3.12.cuda12.9.1
docs/: Makefile  data_preprocess.md  requirements-docs.txt
docs/source/: conf.py  generate_examples.py  index.md
examples/: benchmark_sr.py  test_sr_multi_gpu.py  test_sr_single_gpu.py  test_wan22_combined_loras.py  test_wan22_dual_lora.py  test_wan22_dual_lora_proper.py  test_wan22_high_low_loras.py  test_wan22_two_stage_lora.py
fastvideo/: __init__.py  distill.py  distill_adv.py  envs.py  fastvideo_args.py  image_processor.py  logger.py  train.py  utils.py
fastvideo/attention/: layer.py
fastvideo/configs/: configs.py  utils.py
fastvideo/data_preprocess/: preprocess.py  preprocess_text_embeddings.py  preprocess_vae_latents.py  v1_preprocess.py
fastvideo/dataset/: __init__.py  preprocessing_datasets.py  utils.py
fastvideo/entrypoints/: video_generator.py
fastvideo/layers/: layernorm.py  rotary_embedding.py  visual_embedding.py
fastvideo/models/: registry.py  utils.py
fastvideo/pipelines/: __init__.py  composed_pipeline_base.py  lora_pipeline.py  pipeline_batch_info.py  pipeline_registry.py
fastvideo/sample/: sample_t2v_hunyuan_hf.py  sample_t2v_mochi.py
fastvideo/training/: distillation_pipeline.py  self_forcing_distillation_pipeline.py  training_pipeline.py  training_utils.py  wan_distillation_pipeline.py  wan_i2v_distillation_pipeline.py  wan_i2v_training_pipeline.py  wan_self_forcing_distillation_pipeline.py  wan_training_pipeline.py
fastvideo/utils/: checkpoint.py  collect_env.py  latents_utils.py  load.py  validation.py
fastvideo/v1/: STA_configuration.py  envs.py  fastvideo_args.py  forward_context.py  inference_args.py  inference_engine.py  logger.py  utils.py
fastvideo/worker/: executor.py  gpu_worker.py  multiproc_executor.py  ray_distributed_executor.py
fastvideo/workflow/: workflow_base.py
scripts/dataset_preparation/: resize_videos.py
scripts/distill/: distill_wan.sh  v1_distill_dmd_wan.sh  v1_distill_dmd_wan_VSA.sh
scripts/finetune/: finetune_v1.sh  finetune_v1_VSA.sh
scripts/inference/: v1_inference_fasthunyuan.sh  v1_inference_hunyuan.sh  v1_inference_hunyuan_STA.sh  v1_inference_stepvideo.sh  v1_inference_wan.sh  v1_inference_wan_STA.sh  v1_inference_wan_VSA.sh  v1_inference_wan_VSA_DMD.sh  v1_inference_wan_dmd.sh  v1_inference_wan_i2v.sh
(+431 files in other folders)
